package MainPackage;

import Environment.Buttons;

import javax.swing.*;
import java.awt.*;


public class Main {

    public static void main(String[] args) {

        Start start = new Start();
        start.setBackground(new Color(220,227,238));

//        Buttons x = new Buttons();
    }

}
